# hello-mlir

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  mise.toml
.github/workflows/: ci.yml
docs/: syntax.md
samples/: algorithms.txt  basic_arithmetic.txt  boolean_logic.txt  comments_and_documentation.txt  complex_expressions.txt  conditional_statements.txt  edge_cases_and_testing.txt  empty_functions.txt  functions_and_calls.txt  hello.txt  if_nested.txt  main.txt  mathematical_functions.txt  simple_working.txt  type_system.txt  variables_and_scoping.txt  zero.txt
src/: ast.rs  codegen.rs  lib.rs  main.rs  parser.rs  token.rs  typechecker.rs
src/snapshots/: hello_mlir__parser__tests__parse_assignment.snap  hello_mlir__parser__tests__parse_binary_expression.snap  hello_mlir__parser__tests__parse_complex_expression.snap  hello_mlir__parser__tests__parse_empty_file_should_pass.snap  hello_mlir__parser__tests__parse_error_recovery.snap  hello_mlir__parser__tests__parse_float_binary_expression.snap  hello_mlir__parser__tests__parse_float_literal.snap  hello_mlir__parser__tests__parse_float_literal_f64.snap  hello_mlir__parser__tests__parse_float_literal_with_zero.snap  hello_mlir__parser__tests__parse_function_call.snap  hello_mlir__parser__tests__parse_function_declaration.snap  hello_mlir__parser__tests__parse_function_with_multiple_statements.snap  hello_mlir__parser__tests__parse_functions_with_comments_should_pass.snap  hello_mlir__parser__tests__parse_if_expression.snap  hello_mlir__parser__tests__parse_if_statement.snap  (+33 more)
tests/: machine_code_execution.rs
